fixed alignment issues with <aside> and picture sizes under select work

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -112,7 +112,14 @@ a {
     height: 18px;
     border-radius: 9px;
 }
-
+.selectworkimg {
+    width: 15rem;
+    height: 10rem;
+    margin-right: 1rem;
+    border: 2px solid #e6e6e6;
+    border-radius: 2px;
+    alignment: center;
+}
 .custom-header {
     line-height: 18px;
     text-align: center;
@@ -123,7 +130,7 @@ a {
     margin-bottom: 1rem;
 }
 
-.sideImage {
+.asideImg {
     width: 3rem;
     height: 3rem;
     margin-right: 1rem;
@@ -158,14 +165,11 @@ aside > p:nth-child(4) {
 
 /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
-    .d-md-flex {
-        width: 768px;
-    }
+
 }
 
 /*Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) {
-
 }
 
 /*X-Large devices (large desktops, 1200px and up)*/
